# punie

./: .gitignore  30b_existing_server_results.txt  BENCHMARK_COMPARISON.md  CLAUDE.md  DATA_GENERATION_STATUS.md  DISTILLATION_WORKFLOW.md  EXPERIMENTS_READY.md  IMPROVEMENTS_SUMMARY.md  Justfile  KNOWLEDGE_DISTILLATION_PLAN.md  KNOWLEDGE_DISTILLATION_SUMMARY.md  MODEL_PERFORMANCE_TRACKER.md  MODEL_TESTING_RESULTS.md  NEXT_STEPS.md  OVERNIGHT_RESULTS.md  OVERNIGHT_STATUS.md  PHASE_2_COMPLETION.md  PROJECT_REVIEW.md  PROTOCOL_SEARCH_COMPARISON.md  README.md  READY_TO_TEST.md  SESSION_SUMMARY_2026-02-14.md  THREE_STEP_IMPLEMENTATION_SUMMARY.md  TRAINING_SUMMARY.md  WHILE_YOU_WERE_AWAY.md  benchmark_30b_model.py  benchmark_30b_results.txt  benchmark_3way_results.json  benchmark_comparison_runs_1_2.txt  benchmark_current_output.txt  benchmark_current_results.json  benchmark_phase5_vs_base.py  benchmark_protocol_query.py  benchmark_protocol_results.txt  check_30b_model.py  create_diverse_python_dataset.py  create_hand_authored_tool_examples.py  create_realistic_training_dataset.py  create_tool_calling_dataset.py  download_and_train_baseline.py  (+41 more)
.github/workflows/: ci.yml  pages.yml
adapters/baseline-diverse-python-5k/: adapter_config.json
adapters/glaive-function-calling/: adapter_config.json
adapters/pipeline-test/: adapter_config.json
adapters/successful-demo/: adapter_config.json
adapters/tool-calling-synthetic/: adapter_config.json
adapters/workflow-test/: adapter_config.json
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/standards/: authoring-conventions.md  index.yml
configs/: phase33_training.yaml
data/: domain_examples.jsonl  training_examples_1k.jsonl  training_examples_poc.jsonl
data/benchmark-30b/: train.jsonl
data/merge-test-b/: test.jsonl  train.jsonl  valid.jsonl
data/merged-dataset/: test.jsonl  train.jsonl  valid.jsonl
data/mlx_format/: train.jsonl  valid.jsonl
docs/: client-setup-guide.md  conf.py  devstral-gate-tracker.md  evolution-comparison.md  flywheel.md  impact-of-more-training-data.md  index.md  multi-turn-validation-complete.md  multi-turn-validation-implementation.md  next-steps-phase27-cleaned.md  ollama-implementation-checklist.md  ollama-integration-summary.md  ollama-quickstart.md  performance-baseline.md  phase22-completion-summary.md  phase23-overnight-summary.md  phase23-progress-summary.md  phase23-testing-checklist.md  phase24-completion-summary.md  phase24-plan.md  phase26-deployment-summary.md  phase26-fixes-ready-for-testing.md  phase26-improvements-summary.md  phase26-lsp-fix-deployment.md  phase27-audit-fixes.md  phase27-audit-quickstart.md  phase27-augmented-root-cause-analysis.md  phase27-augmented-validation-analysis.md  phase27-bugfixes-complete.md  phase27-complete-implementation.md  phase27-data-fixes-complete.md  phase27-deployment-summary.md  phase27-punie-validation-results.md  phase28-ask-client-bug-fix.md  phase28-reconnection-support.md  phase28-security-fixes-summary.md  phase28-server-architecture.md  phase28-websocket-fixes-summary.md  phase33-eval-results.md  phase37-devstral-zero-shot-results.md  (+14 more)
examples/: 01_schema_basics.py  02_content_blocks.py  03_tool_call_models.py  04_session_notifications.py  05_tool_call_tracker.py  06_permission_models.py  07_acp_connection_lifecycle.py  08_pydantic_ai_agent.py  09_dynamic_tool_discovery.py  10_session_registration.py  11_cli_usage.py  12_init_config.py  13_serve_dual.py  14_enhanced_test_model.py  15_local_model_server.py  15_mlx_local_model.py  __init__.py  eval_demo.py  hello_world.py  toad_websocket_agent.py
scripts/: audit_training_data.py  benchmark_3way.py  benchmark_6bit_vs_8bit.py  benchmark_current.py  benchmark_phase26_balanced.py  benchmark_phase8.py  benchmark_phases.py  benchmark_speculative.py  check_distribution.py  check_mlx_distribution.py  check_phase5_distribution.py  check_training_progress.sh  clone_popular_repos.py  compare_5bit_6bit.py  compare_distilled.py  convert_phase24_format.py  convert_public_datasets.py  convert_to_code_format.py  convert_to_qwen25_format.py  convert_to_xml_format.py  convert_training_data.py  create-release.sh  curate_non_lsp_examples.py  debug_convert.py  debug_filter.py  debug_json.py  debug_parser.py  download_stack_v2.py  evaluate_distilled_model.py  fix_git_log_examples.py  fix_phase27_data_issues.py  fuse_phase21.sh  fuse_phase23.sh  fuse_phase25.sh  fuse_phase26.sh  fuse_phase26_contrastive.sh  fuse_phase26_lsp.sh  fuse_phase27.sh  fuse_phase275.sh  fuse_phase27_augmented.sh  (+118 more)
tests/: acp_helpers.py  conftest.py  test_acp_protocol_compliance.py  test_acp_sdk.py  test_agent_config.py  test_cli.py  test_cli_download.py  test_cli_perf.py  test_concurrency.py  test_cst_code_tools.py  test_cst_core.py  test_discovery.py  test_domain_models.py  test_dual_protocol.py  test_enhanced_test_model.py  test_examples.py  test_execute_code.py  test_fakes.py  test_freethreaded.py  test_http_app.py  test_integration.py  test_local_client.py  test_local_model_spec.py  test_local_server_fallback.py  test_lsp_client.py  test_managed_server.py  test_memory.py  test_mlx_fallback.py  test_mlx_model.py  test_monty_runner.py  test_notifications.py  test_perf_acp.py  test_perf_collector.py  test_perf_report.py  test_perf_toolset.py  test_prompt_utils.py  test_protocol_satisfaction.py  test_punie.py  test_pydantic_agent.py  test_receiver.py  (+51 more)
(+495 files in other folders)
