[project]
name = "punie"
version = "0.1.0"
description = "AI coding agent that delegates tool execution to PyCharm via ACP"
requires-python = ">=3.14"
dependencies = [
    "psutil>=6.0.0",
    "pydantic>=2.0",
    "pydantic-ai-slim[openai]>=0.1.0",
    "starlette>=0.45.0",
    "typer>=0.15.0",
    "uvicorn>=0.34.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.scripts]
punie = "punie.cli:app"

[dependency-groups]
dev = [
    "anyio>=4.0.0",
    "coverage>=7.13.0",
    "furo>=2025.12.19",
    "httpx>=0.28.0",
    "linkify-it-py>=2.0.3",
    "mlx-lm>=0.30.6",
    "myst-parser",
    "pyrefly>=0.46.1",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "sphinx>=8",
    "sphinx-autobuild>=2025.8.25",
    "sybil[pytest]>=8.4.2",
    "ty>=0.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src", "examples"]
python_files = ["test_*.py"]
addopts = "-p no:doctest -m \"not slow\""
pythonpath = ["examples"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "thread_unsafe: marks tests with shared state that should not run in parallel",
]
timeout = 60
faulthandler_timeout = 120

[tool.coverage.run]
omit = [
    "src/punie/acp/stdio.py",
    "src/punie/acp/transports.py",
    "src/punie/acp/telemetry.py",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["src/punie/acp/schema.py"]
